tests/compile_fail/invalid_container_name_literal.rs
use surgeist_style::ContainerName;

fn main() {
    let _name = ContainerName {
        value: String::new(),
    };
}
