tests/compile_fail/invalid_container_name_literal.stderr
error[E0451]: field `value` of struct `ContainerName` is private
 --> tests/compile_fail/invalid_container_name_literal.rs:5:9
  |
4 |     let _name = ContainerName {
  |                 ------------- in this type
5 |         value: String::new(),
  |         ^^^^^ private field
